[project]
name = "minamiumezawa-blog"
version = "0.1.0"
description = "梅泽美波(Nogizaka46)博客归档项目 - 可部署静态网站"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "jinja2>=3.1.0",
    "pillow>=10.4.0",
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
